--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     align-items: center;
-    background-image: url(./assets/photo3.jpg);
-    background-attachment: fixed;
+    background-image: url(./assets/blurred-calendar-pencil-blue-tone-260nw-641052127.jpg);
+    background-size: cover;
 }
 
 
