--- a/style.css
+++ b/style.css
@@ -6,3 +6,25 @@ body {
 
 
 
+h1{
+    text-align: center;
+}
+
+p{
+    font-size: 1rem;
+    /* animation-duration: 5s;
+    animation-name: slidein; 
+  }
+  
+  @keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%;
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+} */
+
+}
